[tool.poetry]
name = "aiogram_pyrogram_album_handler"
version = "0.1.0"
description = "A way to process albums in aiogram using pyrogram."
authors = ["Mikhail Smolnikov <smolnik.mikhail@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.18"
Pyrogram = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
